--- a/public/stylesheets/style.styl
+++ b/public/stylesheets/style.styl
@@ -1,5 +1,6 @@
-body
-  padding: 50px
-  font: 14px "Lucida Grande", Helvetica, Arial, sans-serif
-a
-  color: #00B7FF
+#hero
+  height: 100vh
+  .avatar
+    max-width: 100px
+  p.roles
+    font-weight: 300
