--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -15,13 +15,6 @@ a {
 a:hover {
   border-bottom: 2px solid #1976d2;
 }
-.strip {
-  position: absolute;
-  right: 0;
-  height: 105vh;
-  width: 8px;
-  background-color: #1976d2;
-}
 .fa {
   color: #1976d2;
 }
@@ -64,7 +57,7 @@ ul#slide-out a {
 /*hero page*/
 #hero {
   z-index: 1;
-  height: 100vh;
+  padding: 100px 0;
 }
 #hero .avatar {
   max-width: 160px;
@@ -90,10 +83,13 @@ ul#slide-out a {
 /*footer template*/
 #footer {
   background-color: #1976d2;
-  height: 110px;
+  position: absolute;
+  bottom: -10px;
+  width: 100%;
+  height: 150px;
 }
 #footer ul li {
-  padding-top: 18px;
+  padding: 18px 0;
   display: inline;
   color: #fafafa;
 }
