--- a/views/templates/hero.jade
+++ b/views/templates/hero.jade
@@ -3,7 +3,7 @@
   .col.s12.center-align
     .avatar
       img.circle.responsive-img(src="images/helicopter.jpg", alt="")
-    h5 Colin Gillingham
+    h5 Colin Gillingham!!!
     h6 <i class="fa fa-map-marker"></i> London, UK
     p.roles product management ~ web development ~ sales & marketing
     ul.experience Experience
