--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,102 +1,48 @@
-/*variables*/
-/*display toggles*/
-.hide {
-  display: none;
+html,body,.container {
+    height:100%;
 }
-/*layout styling*/
-body {
-  box-sizing: border-box;
-  font-color: #212121;
+.container {
+    display:table;
+    width: 100%;
+    padding: 0; /*set left/right padding according to needs*/
+    box-sizing: border-box;
 }
-a {
-  font-weight: 500;
-  color: #1976d2;
+
+.row {
+    height: 100%;
+    display: table-row;
 }
-a:hover {
-  border-bottom: 2px solid #1976d2;
-}
-.fa {
-  color: #1976d2;
-}
-/*menu button styling*/
-#menu-btn {
-  z-index: 5;
-  position: absolute;
-  right: 40px;
-  top: 40px;
-}
-/*slide out menu styling*/
-ul#slide-out {
-  background-color: #1976d2;
-  display: inline-block;
-}
-ul#slide-out li {
-  max-width: 300px;
+
+.avatar {
   margin: 0 auto;
+  text-align: center;
 }
-ul#slide-out a {
-  color: #fafafa;
-  font-size: 2.5em;
-  font-weight: 200;
-  line-height: 2em;
-  padding-bottom: 75px;
+
+.avatar > img {
+  max-width: 100px;
+  border-radius: 200px;
 }
-/*company template*/
-#company-info {
-  padding-top: 60px;
+
+.row .cell {
+  display: table-cell;
+  float: none;
 }
-#company-info p {
-  margin: 0;
+
+.cell-1 {   
+  background-color: black;
+  width: 30%;
 }
-#company-info .description {
-  padding: 30px 0;
-  font-size: 1.25em;
-  max-width: 800px;
-  margin: 0 auto;
+.cell-2 {
+  background: #e0e0e0; 
+  width: 70%;
 }
-/*hero page*/
-#hero {
-  z-index: 1;
-  padding: 100px 0;
-}
-#hero .avatar {
-  max-width: 160px;
-  margin: 0 auto;
-  padding: 0 0 20px 0;
-}
-#hero h5 {
-  font-weight: 300;
-}
-#hero h6 {
-  font-weight: 500;
-  font-style: italics;
-}
-#hero p.roles {
-  font-weight: 300;
-}
-#hero ul.experience {
-  font-weight: 500;
-}
-#hero ul.experience li {
-  font-weight: 300;
-}
-/*footer template*/
-#footer {
-  background-color: #1976d2;
-  position: absolute;
-  bottom: -10px;
-  width: 100%;
-  height: 150px;
-}
-#footer ul li {
-  padding: 18px 0;
-  display: inline;
-  color: #fafafa;
-}
-#footer ul li i {
-  font-size: 1.5em;
-  color: #fafafa;
-}
-#footer ul li a {
-  color: #fafafa;
+
+@media (max-width:700px){
+  .cell-1 {
+      display: none !important;
+      width: 0%;
+    }
+  .cell-2 {
+    width: 100%;
+  }
 }
