--- a/views/templates/home.jade
+++ b/views/templates/home.jade
@@ -1,6 +1,20 @@
 .row
-  .cell.cell-1
+  .col-sm-3
+    img.img-fluid(src="/images/sintra.jpg")
+  .col-sm-9
+    h1 Colin Gillingham
+    p Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
     .row
-      .col-12.avatar
-        img.img-fluid(src="/images/sintra.jpg")
-  .cell.cell-2
+      .col-sm-3
+        h4 Tesla
+        p blah
+        h4 ProLeads
+        p 500 startups
+        h4 WIREWAX
+        p product manger
+      .col-sm-9
+        h4 Expertise
+        ul
+          li sales
+          li marketing
+          li product management
