--- a/views/layout.jade
+++ b/views/layout.jade
@@ -1,19 +1,263 @@
 doctype html
-html
+html(lang='en')
   head
-    title Colin Gillingham: Product, Developer & Sales and Marketing
-    // Latest compiled and minified CSS
-    link(rel='stylesheet', href='https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css', integrity='sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u', crossorigin='anonymous')
-    // Optional theme
-    link(rel='stylesheet', href='https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css', integrity='sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp', crossorigin='anonymous')
-    // Latest compiled and minified JavaScript
-    script(src='https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js', integrity='sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa', crossorigin='anonymous')
-    link(rel='stylesheet', href='/stylesheets/style.css')
+    meta(charset='utf-8')
+    meta(http-equiv='X-UA-Compatible', content='IE=edge')
     meta(name='viewport', content='width=device-width, initial-scale=1')
+    meta(name='description', content='')
+    meta(name='author', content='')
+    title Mountain King - Bootstrap Template
+    // Bootstrap core CSS
+    link(href='bootstrap/css/theme.css', rel='stylesheet')
+    // Custom styles for this template
+    link(href='stylesheets/style.css', rel='stylesheet')
+    // HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries
+    //if lt IE 9
+      script(src='https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js')
+      script(src='https://oss.maxcdn.com/respond/1.4.2/respond.min.js')
+    link(href='https://fonts.googleapis.com/css?family=Roboto+Slab:400,300,700,100', rel='stylesheet', type='text/css')
+    link(href='https://fonts.googleapis.com/css?family=Raleway:300,700,900,500', rel='stylesheet', type='text/css')
+    link(rel='stylesheet', href='https://cdnjs.cloudflare.com/ajax/libs/typicons/2.0.8/typicons.min.css')
+    link(rel='stylesheet', href='https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css')
+    link(rel='stylesheet', href='assets/css/pushy.css')
+    link(rel='stylesheet', href='assets/css/masonry.css')
+    link(rel='stylesheet', href='assets/css/animate.css')
+    link(rel='stylesheet', href='assets/css/magnific-popup.css')
+    link(rel='stylesheet', href='assets/css/odometer-theme-default.css')
+    script.
+      window.odometerOptions = {
+      selector: '.odometer',
+      format: '(,ddd)', // Change how digit groups are formatted, and how many digits are shown after the decimal point
+      duration: 13000, // Change how long the javascript expects the CSS animation to take
+      theme: 'default'
+      };
   body
-    header
-    .container
-        block content
-    script(src="https://code.jquery.com/jquery-3.1.1.min.js", integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8=", crossorigin="anonymous")
-    script(src='/javascripts/materialize.min.js')
-    script(src='/javascripts/main.js')
+    // Pushy Menu
+    nav.pushy.pushy-left
+      ul.list-unstyled
+        li
+          a(href='#home') Home
+        li
+          a(href='#feat') Features
+        li
+          a(href='#about') About me
+        li
+          a(href='#news') My Blog
+        li
+          a(href='#history') My History
+        li
+          a(href='#photos') Look my Photos
+        li
+          a(href='#contact') Get in Touch!
+        li
+          a(href='http://www.themeinthebox.com/ourtheme/mountain-king-bootstrap-template/', target='_blank') Download
+    // Site Overlay
+    .site-overlay
+    header#home
+      .container-fluid
+        // change the image in style.css to the class header .container-fluid [approximately row 50]
+        .container
+          .row
+            .col-md-3.col-xs-10
+              a.thumbnail.logo(href='#')
+                img.img-responsive(src='images/your_logo.png', alt='')
+            .col-md-1.col-md-offset-8.col-xs-2.text-center
+              .menu-btn
+                span.hamburger
+                  i.fa.fa-bars
+          .jumbotron
+            h1
+              small In the hall of the
+              br
+              strong Mountain King
+            p
+              | This is a simple hero unit, a simple jumbotron-style component for
+              br
+              | calling extra attention to featured content or information.
+            p
+              a.btn.btn-primary.btn-lg(href='#', role='button') Learn more
+              a.btn.btn-lg.btn-danger(target='_blank', href='http://www.themeinthebox.com/ourtheme/mountain-king-bootstrap-template/', role='button') Download
+    section#feat
+      .container
+        .row.features
+          .col-md-4.text-center.wow.fadeInUp(data-wow-delay='100ms')
+            span.typcn.typcn-pencil.x3
+            h4 Consectetur Risus
+            p
+              | Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.
+          .col-md-4.text-center.wow.fadeInUp(data-wow-delay='300ms')
+            span.typcn.typcn-camera-outline.x3
+            h4 Ultricies Aenean
+            p
+              | Cras justo odio, dapibus ac facilisis in, egestas eget quam. Integer posuere erat a ante venenatis dapibus posuere velit aliquet. Donec ullamcorper nulla non metus auctor fringilla.
+          .col-md-4.text-center.wow.fadeInUp(data-wow-delay='500ms')
+            span.typcn.typcn-bookmark.x3
+            h4 Cras Sollicitudin
+            p
+              | Etiam porta sem malesuada magna mollis euismod. Aenean eu leo quam. Pellentesque ornare sem lacinia quam venenatis vestibulum. Maecenas faucibus mollis interdum.
+    section#about.number.wow.fadeInUp(data-wow-delay='300ms')
+      // change the image in style.css to the class .number .container-fluid [approximately row 102]
+      .container-fluid
+        .container
+          .row
+            .col-md-6.opaline.col-md-offset-6
+              .row
+                .col-md-offset-1.col-md-10
+                  h3 Ligula Mattis Ornare Ultricies
+                  h5 Pellentesque Cursus Amet Parturient Etiam
+                  p
+                    | Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.
+              .row.text-center
+                // set the numbers in assets/js/scripts.js
+                .col-md-4.boxes.col-xs-6.col-xs-offset-3.col-lg-4.col-lg-offset-1.col-md-offset-1.col-sm-6.wow.fadeInUp
+                  h5 Ultricies
+                  h3.odometer.01 00000
+                .col-md-4.boxes.col-xs-6.col-xs-offset-3.col-lg-4.col-lg-offset-2.col-md-offset-2.col-sm-6.wow.fadeInUp(data-wow-delay='300ms')
+                  h5 Fermentum
+                  h3.odometer.02 00000
+    section#news.blog.wow.fadeInUp(data-wow-delay='300ms')
+      .container
+        .row
+          .col-md-7
+            h2 Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+            p
+              | Duis mollis, est non commodo luctus, nisi erat porttitor ligula, eget lacinia odio sem nec elit. Maecenas sed diam eget risus varius blandit sit amet non magna. Donec sed odio dui. Curabitur blandit tempus porttitor. Nullam id dolor id nibh ultricies vehicula ut id elit. Etiam porta sem malesuada magna mollis euismod.
+            p
+              | Donec id elit non mi porta gravida at eget metus. Donec id elit non mi porta gravida at eget metus. Integer posuere erat a ante venenatis dapibus posuere velit aliquet. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Nulla vitae elit libero, a pharetra augue.
+            a.btn.btn-danger.btn-lg(href='#')
+              | Take a Look 
+              i.fa.fa-arrow-circle-o-right
+          .col-md-5
+            a(href='#')
+              img.img-responsive(src='https://unsplash.it/1200/1200?image=839', alt='')
+    section#history.story.wow.fadeInUp(data-wow-delay='300ms')
+      // change the image in style.css to the class .story .container-fluid [approximately row 141]
+      .container-fluid
+        .container
+          .row
+            .col-md-6.opaline
+              .row
+                .col-md-10.col-md-offset-1
+                  p.lead
+                    i
+                      | Donec sed odio dui. Integer posuere erat a ante venenatis dapibus posuere velit aliquet. Praesent commodo cursus magna, vel scelerisque nisl consectetur et.
+                  p
+                    i
+                      | Aenean eu leo quam. Pellentesque ornare sem lacinia quam venenatis vestibulum. Duis mollis, est non commodo luctus, nisi erat porttitor ligula, eget lacinia odio sem nec elit. Aenean eu leo quam. Pellentesque ornare sem lacinia quam venenatis vestibulum. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Praesent commodo cursus magna, vel scelerisque nisl consectetur et.
+                  h6.lead  – Fermentum Dapibus
+                  p
+                    small
+                      | Nibh Etiam Risus Bibendum
+                      br
+                      |         Nullam id dolor id nibh ultricies vehicula ut id elit.
+    section#photos.gallery.wow.fadeInUp(data-wow-delay='300ms')
+      .container
+        .row
+          .masonry.image-gallery
+            .grid-sizer
+            .gutter-sizer
+            .item.item-width2
+              a(href='https://unsplash.it/1000/600?image=529')
+                img(src='https://unsplash.it/600/300?image=529', alt='')
+            .item
+              a(href='https://unsplash.it/1000/600?image=523')
+                img(src='https://unsplash.it/320/776?image=523', alt='')
+            .item
+              a(href='https://unsplash.it/600/1000?image=503')
+                img(src='https://unsplash.it/500/800?image=503', alt='')
+            .item
+              a(href='https://unsplash.it/1000/600?image=505')
+                img(src='https://unsplash.it/400/400?image=505', alt='')
+            .item
+              a(href='https://unsplash.it/800/800?image=454')
+                img(src='https://unsplash.it/4403/2476?image=454', alt='')
+            .item
+              a(href='https://unsplash.it/800/800?image=515')
+                img(src='https://unsplash.it/585/439?image=515', alt='')
+            .item.item-width2
+              a(href='https://unsplash.it/1000/600?image=451')
+                img(src='https://unsplash.it/600/140?image=451', alt='')
+    section.clients.wow.fadeInUp(data-wow-delay='300ms')
+      .container
+        .row
+          .col-md-2
+            img.img-responsive(src='images/logo-sample-01.jpg')
+          .col-md-2
+            img.img-responsive(src='images/logo-sample-02.jpg')
+          .col-md-2
+            img.img-responsive(src='images/logo-sample-03.png')
+          .col-md-2
+            img.img-responsive(src='images/logo-sample-04.jpg')
+          .col-md-2
+            img.img-responsive(src='images/logo-sample-05.jpg')
+          .col-md-2
+            img.img-responsive(src='images/logo-sample-06.png')
+    section#contact.prefooter.wow.fadeInUp(data-wow-delay='300ms')
+      // change the image in style.css to the class .prefooter .container-fluid [approximately row 154]
+      .container-fluid
+        .container
+          .row
+            .col-md-8
+              h3
+                | Maecenas sed diam eget risus varius
+                br
+                |  blandit sit amet non magna.
+              p
+                | Aenean eu leo quam. Pellentesque ornare sem lacinia quam venenatis vestibulum. Cras mattis consectetur purus sit amet fermentum. Praesent commodo cursus magna, vel scelerisque nisl consectetur et. Praesent commodo cursus magna, vel scelerisque nisl consectetur et.
+              .row
+                .col-md-6
+                  input.form-control(type='text', placeholder='Your Email Here...')
+                  br
+                  button.btn.btn-danger(type='button') Submit Newsletter
+    footer
+      .container
+        .row
+          .col-md-8
+            h3 Your Logo
+            p
+              | © 2016 Your Company. Designed and Developed by 
+              a(target='_blank', href='http://www.themeinthebox.com') ThemeintheBox.com
+          .col-md-4
+            p.text-right.social
+              a(href='https://www.facebook.com/ThemeInTheBox/', target='_blank')
+                i.typcn.typcn-social-facebook-circular
+              a(href='https://twitter.com/ThemeintheBox', target='_blank')
+                i.typcn.typcn-social-twitter-circular
+              i.typcn.typcn-social-tumbler-circular
+              i.typcn.typcn-social-github-circular
+              i.typcn.typcn-social-dribbble-circular
+    //
+      Bootstrap core JavaScript
+      ==================================================
+    // Placed at the end of the document so the pages load faster
+    script(src='assets/js/jquery.min.js')
+    script(src='bootstrap/js/bootstrap.min.js')
+    script(src='https://netdna.bootstrapcdn.com/twitter-bootstrap/2.0.4/js/bootstrap-scrollspy.js')
+    // IE10 viewport hack for Surface/desktop Windows 8 bug
+    script(src='assets/js/ie10-viewport-bug-workaround.js')
+    script(src='http://masonry.desandro.com/masonry.pkgd.js')
+    script(src='assets/js/masonry.js')
+    script(src='assets/js/pushy.min.js')
+    script(src='assets/js/jquery.magnific-popup.min.js')
+    script(src='assets/js/wow.min.js')
+    script(src='assets/js/scripts.js')
+    script(src='assets/js/odometer.js')
+//- doctype html
+//- html
+//-   head
+//-     title Colin Gillingham: Product, Developer & Sales and Marketing
+//-     // Latest compiled and minified CSS
+//-     link(rel='stylesheet', href='https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css', integrity='sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u', crossorigin='anonymous')
+//-     // Optional theme
+//-     link(rel='stylesheet', href='https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css', integrity='sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp', crossorigin='anonymous')
+//-     // Latest compiled and minified JavaScript
+//-     script(src='https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js', integrity='sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa', crossorigin='anonymous')
+//-     link(rel='stylesheet', href='/stylesheets/style.css')
+//-     meta(name='viewport', content='width=device-width, initial-scale=1')
+//-   body
+//-     header
+//-     .container
+//-         block content
+//-     script(src="https://code.jquery.com/jquery-3.1.1.min.js", integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8=", crossorigin="anonymous")
+//-     script(src='/javascripts/materialize.min.js')
+//-     script(src='/javascripts/main.js')
