--- a/views/layout.jade
+++ b/views/layout.jade
@@ -10,7 +10,7 @@ html(lang='en')
     // Bootstrap core CSS
     link(href='bootstrap/css/theme.css', rel='stylesheet')
     // Custom styles for this template
-    link(href='stylesheets/style.css', rel='stylesheet')
+    link(href='stylesheets/styles.css', rel='stylesheet')
     // HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries
     //if lt IE 9
       script(src='https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js')
