added drop shaddow to text

--- a/views/layout.jade
+++ b/views/layout.jade
@@ -49,9 +49,7 @@ html(lang='en')
               br
               small startup consultant
             p
-              | After seven years working in Silicon Valley, for startups like Tesla,
-              br
-              | I'm helping companies in Europe grow with tips and tricks learned in California.
+              | After seven years working in Silicon Valley, for innovative startups like Tesla, I've moved to Europe to lend my skills to companies solving interesting problems here.
   section.clients.wow.fadeInUp(data-wow-delay='300ms')
     .container
       .row
