--- a/public/stylesheets/styles.css
+++ b/public/stylesheets/styles.css
@@ -5,6 +5,9 @@
 h1, h2, h3, h4, h5, h6
 {
     font-family: 'Roboto Slab', serif;
+    color: rgba(0,0,0,0.6);
+    text-shadow: 2px 0px 6px rgba(0,0,0,0.4),
+    0px -5px 35px rgba(255,255,255,0.3);
 }
 
 h1, h2, h3, h4, h5, h6
