small text hack

--- a/views/layout.jade
+++ b/views/layout.jade
@@ -48,7 +48,7 @@ html(lang='en')
               strong Colin Gillingham
               br
               small startup consultant
-            p
+            p.small-hide
               | After seven years working in Silicon Valley, for innovative startups like Tesla, I've moved to Europe to lend my skills to companies solving interesting problems here.
   section.clients.wow.fadeInUp(data-wow-delay='300ms')
     .container
