--- a/public/stylesheets/styles.css
+++ b/public/stylesheets/styles.css
@@ -226,3 +226,9 @@ img.tesla {
 img.wirewax {
     padding-top: 10px;
 }
+
+@media all and (max-width: 700px) {
+    .small-hide {
+        display: none;
+    }
+}
