--- a/views/layout.jade
+++ b/views/layout.jade
@@ -107,7 +107,7 @@ html(lang='en')
               h3
                 | Offering Free Advice in Lisboa
               p
-                | Send me a message if you'd like to learn more over coffee or a beer.
+                | Give me a shout, if you'd like to learn more. Happy to meet in Lisbon and chat over a coffee or beer!
               .row
                 .col-md-12
                   form(action="/", method="post")
@@ -115,7 +115,7 @@ html(lang='en')
                     br
                     textarea.form-control(type='textarea', name="message", placeholder='Your Message...', required)
                     br
-                    button.btn.btn-danger(type='submit') Send Message
+                    button.btn.btn-danger(type='submit') Send Message!
     footer
       .container
         .row
