--- a/views/layout.jade
+++ b/views/layout.jade
@@ -103,20 +103,9 @@ html(lang='en')
       .container-fluid
         .container
           .row
-            .col-md-8
-              //- h3
-              //-   | Offering Free Advice in Lisboa
-              p
-                | Give me a shout, if you'd like to learn more. Happy to meet in Lisbon and chat over a coffee or beer!
-              a(href="mailto:colingillingham@gmail.com", target="_blank") colingillingham@gmail.com
-              //- .row
-              //-   .col-md-12
-              //-     form(action="/", method="post")
-              //-       input.form-control(type='text', name="email", placeholder='Email Address', required)
-              //-       br
-              //-       textarea.form-control(type='textarea', name="message", placeholder='Your Message...', required)
-              //-       br
-              //-       button.btn.btn-danger(type='submit') Send Message!
+            .col-md-12
+              iframe#typeform-full(width='100%', height="400px", frameborder='0', src='https://gillinghammer.typeform.com/to/UXrq4f')
+                  script(type='text/javascript', src='https://s3-eu-west-1.amazonaws.com/share.typeform.com/embed.js')
     footer
       .container
         .row
